frontend/css/style.css
* {
	padding: 0;
	margin: 0;
	box-sizing: border-box;
}

body {
	position: relative;
}
.bg_color {
	position: fixed;
	top: 0;
	left: 0;
	height: 100vh;
	width: 100vw;
	z-index: -1;
}

#gif {
	background-color: transparent;
}
.gif {
	background-image: url("../songs_test/giphy.gif");
	min-height: 100vh;
	min-width: 100vw;
	position: fixed;
	top: 0;
	left: 0;
	z-index: 0;
}
.toggle_gif_btn_container {
	position: absolute;
	left: 50%;
	top: -2rem;
	transform: translateX(-50%);
	background: none;
	border: none;
	outline: none;
	background-color: rgba(255, 255, 255, 0);
}

.toggle_gif_btn > i {
	--fs: 18px;
}

.tooltip {
	padding: 0.5rem;
	background-color: rgba(0, 0, 0, 0.65);
	color: rgb(255, 255, 255);
	position: absolute;
	top: 0rem;
	left: 3rem;
	width: 16rem;
	z-index: 2;
}
.gif_btn_tooltip {
	display: none;
}
.toggle_gif_btn_container:hover .gif_btn_tooltip {
	display: block;
}

h1 {
	color: inherit;
}
button {
	cursor: pointer;
	background: none;
	outline: none;
	border: none;
}

.audio_player_bg {
	background: rgba(255, 255, 255, 0.5);
	backdrop-filter: blur(2rem);
	padding: 2rem;
	border: 2px solid rgb(255, 255, 255);
	border-radius: 1rem;
	width: max-content;
	margin-inline: auto;
	margin-top: 4rem;
}

.audio_player_container {
	display: flex;
	flex-direction: column;
	align-items: center;
	gap: 1.5rem;
}

i {
	font-size: var(--fs, 2rem);
	background: rgba(255, 255, 255, 0);
	color: rgba(255, 255, 255);
}

.play_pause_btn,
.volume_btn {
	border: none;
	outline: none;
	background: rgba(255, 255, 255, 0);
}
.time_display {
	color: rgba(255, 255, 255);
}

.artwork_container {
	width: 10rem;
	aspect-ratio: 1/1;
	border-radius: 50%;
	border-bottom: 2px solid rgb(255, 255, 255);
}
.artwork {
	width: 100%;
	height: 100%;
	object-fit: fit;
	border-radius: 50%;
}
.animate_artwork {
	animation: spin 5s infinite linear;
}

@keyframes spin {
	0% {
		transform: rotate(0deg);
	}
	100% {
		transform: rotate(360deg);
	}
}

.sound_slider {
	display: flex;
	gap: 1rem;
	justify-content: center;
	align-items: center;
}

/* test audio slider style */

input[type="range"] {
	-webkit-appearance: none;
	width: 100%;
	height: 10px;
	background-color: #ddd;
	border-radius: 5px;
	outline: none;
}

input[type="range"]::-webkit-slider-thumb {
	-webkit-appearance: none;
	width: 20px;
	height: 20px;
	background-color: #007aff;
	border-radius: 50%;
	cursor: pointer;
}

input[type="range"]::-webkit-slider-thumb:hover {
	background-color: #0056b3;
}

input[type="range"]::-moz-range-thumb {
	width: 20px;
	height: 20px;
	background-color: #007aff;
	border-radius: 50%;
	cursor: pointer;
}

input[type="range"]::-moz-range-thumb:hover {
	background-color: #0056b3;
}

input[type="range"]::-ms-thumb {
	width: 20px;
	height: 20px;
	background-color: #007aff;
	border-radius: 50%;
	cursor: pointer;
}

input[type="range"]::-ms-thumb:hover {
	background-color: #0056b3;
}

/* about modals */
dialog::backdrop {
	background: rgba(0, 0, 0, 0.6);
}

dialog:modal {
	background: rgba(255, 255, 255, 0.5);
	backdrop-filter: blur(2.5rem);
	padding: 2rem;
	border: 2px solid rgb(255, 255, 255);
	border-radius: 1rem;
	width: max-content;
	max-width: 70%;
	margin-inline: auto;
	margin-top: 4rem;
}
.about_dialog_container {
	display: flex;
	flex-direction: column;
	gap: 1rem;
	justify-content: center;
	align-items: left;
	color: rgb(255, 255, 255);
}
.dialog_btn_container {
	position: relative;
	width: fit-content;
	margin-inline: auto;
	margin-top: 2rem;
}

.about_dialog_close_btn,
.about_dialog_open_btn {
	font-size: 32px;
	display: inline;
	position: relative;
}
.dialog_btn_tooltip {
	display: none;
}
.about_dialog_open_btn:hover,
.about_dialog_close_btn:hover {
	animation: spin 1s linear;
}

.dialog_btn_container:hover .dialog_btn_tooltip {
	display: block;
}

